--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- your app's js -->
+    <script src="js/common.js"></script>    
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
